# employee_management_system

./: .gitignore  CMakeLists.txt  README.md
include/: manager.h  module.h
lib/: main.cpp  manager.cpp  module.cpp
one_file_version/: employee_management_system.cpp
